--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http: ^0.13.6
   image_picker: ^0.8.7+4
   go_router: ^14.2.8
+  easy_localization: ^3.0.8
+  flutter_screenutil: ^5.9.3
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
-  #   - images/a_dot_ham.jpeg
+     - assets/translation/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
