refactor FullMapScreen to use CustomAppBar and simplify layout

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   easy_localization: ^3.0.8
   flutter_screenutil: ^5.9.3
   intl: ^0.20.2
+  flutter_tts: ^4.2.3
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,7 @@ flutter:
   assets:
      - assets/images/
      - assets/translation/
+     - assets/data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
