--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^0.13.6
+  http: ^1.1.0
   image_picker: ^0.8.7+4
   go_router: ^14.2.8
   easy_localization: ^3.0.8
@@ -42,7 +42,10 @@ dependencies:
   intl: ^0.20.2
   flutter_tts: ^4.2.3
   flutter_bloc: ^9.1.1
-
+  firebase_core: ^4.2.0
+  firebase_auth: ^6.1.1
+  cloud_firestore: ^6.0.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
