--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.1.0
   image_picker: ^0.8.7+4
   go_router: ^14.2.8
+  shared_preferences: ^2.2.3
   easy_localization: ^3.0.8
   flutter_screenutil: ^5.9.3
   intl: ^0.20.2
