Add localization support, update dependencies, and include detailed Egyptian landmarks data
- Integrated easy_localization for multilingual support in main_screen.dart.
- Updated pubspec.yaml to include cached_network_image dependency.
- Enhanced pubspec.lock with new dependencies including cached_network_image and others.
- Added egypt_landmarks_detailed.json containing comprehensive information about various Egyptian landmarks.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
   carousel_slider: ^5.1.1
+  cached_network_image: ^3.4.1
   
 dev_dependencies:
   flutter_test:
