feat: Implement full map screen with search functionality
- Added FullMapScreen to display Google Map with user location.
- Created CustomSearchBar for location search input.
- Developed FullMapController to manage map interactions and location services.
- Integrated LocationService to handle GPS permissions and current location retrieval.
- Implemented marker placement for user and search results on the map.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   cloud_firestore: ^6.0.3
   carousel_slider: ^5.1.1
   cached_network_image: ^3.4.1
+  google_maps_flutter: ^2.14.0
+  geocoding: ^4.0.0
+  geolocator: ^14.0.2
+
   
 dev_dependencies:
   flutter_test:
