--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,9 @@ dependencies:
   flutter_tts: ^4.2.3
   flutter_bloc: ^9.1.1
   firebase_core: ^4.2.0
-  firebase_auth: ^6.1.1
+  firebase_auth: ^6.1.2
   cloud_firestore: ^6.0.3
+  google_sign_in: ^7.2.0
   carousel_slider: ^5.1.1
   cached_network_image: ^3.4.1
   google_maps_flutter: ^2.14.0
