--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,15 +43,17 @@ dependencies:
   intl: ^0.20.2
   flutter_tts: ^4.2.3
   flutter_bloc: ^9.1.1
-  firebase_core: ^4.2.0
-  firebase_auth: ^6.1.2
-  cloud_firestore: ^6.0.3
-  google_sign_in: ^7.2.0
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  cloud_firestore: ^5.6.8
+  flutter_signin_button: ^2.0.0
+  google_sign_in: ^6.3.0
   carousel_slider: ^5.1.1
   cached_network_image: ^3.4.1
   google_maps_flutter: ^2.14.0
   geocoding: ^4.0.0
   geolocator: ^14.0.2
+  firebase_storage: ^12.4.10
 
   
 dev_dependencies:
